# ghosty-launch

./: Cargo.toml  README.md  install.sh
.github/workflows/: release.yml
crates/loop-engine/: Cargo.toml
crates/loop-engine/src/: client.rs  config.rs  lib.rs  logging.rs  pricing.rs  tools.rs  turn.rs
crates/loop-engine/src/client/: chat.rs
crates/loop-engine/src/llm_client/: mock.rs
crates/loop-engine/src/tools/: schema_sanitize.rs  truncate.rs
docs/: handoff-agente.md  plan-agente-error.md  spike-agente-error.md
src/: agent.rs  app.rs  audio.rs  debug.rs  easybits.rs  main.rs  oauth.rs  recipe.rs  ui.rs
src/snapshots/: ghosty_launch__ui__snapshot__apps_panel.snap  ghosty_launch__ui__snapshot__consent.snap  ghosty_launch__ui__snapshot__customize.snap  ghosty_launch__ui__snapshot__envs.snap  ghosty_launch__ui__snapshot__envs_reconfig.snap  ghosty_launch__ui__snapshot__key_entry.snap  ghosty_launch__ui__snapshot__launching.snap  ghosty_launch__ui__snapshot__live.snap  ghosty_launch__ui__snapshot__live_fresh.snap
