[workspace]
members = ["crates/loop-engine"]

[package]
name = "ghosty-launch"
version = "0.0.1"
edition = "2021"
description = "Ghosty Launch — clona un repo y lo publica live en una VM de EasyBits, con tu llave y casi nada más."
license = "Apache-2.0"

[[bin]]
name = "ghosty-launch"
path = "src/main.rs"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
sha2 = "0.10"
toml = "0.8"
base64 = "0.22"
getrandom = "0.2"
urlencoding = "2"
loop-engine = { path = "crates/loop-engine" }

[dev-dependencies]
insta = "1"

[profile.release]
strip = true
lto = "thin"
